# associative-dependent-logic

./: .dockerignore  .gitignore  .gitkeep  ARCHITECTURE.md  CLAUDE.md  README.md  package-lock.json  package.json
docker/: Dockerfile.js  Dockerfile.rust  README.md  docker-compose.yml
docs/: COMPATIBILITY.md  CONCEPTS-COMPARISION.md  (+13 more)
rust/: Cargo.toml  README.md
rust/examples/: bayesian-inference.lino  bayesian-network.lino  belnap-four-valued.lino  cst_roundtrip_demo.rs  dependent-types.lino  markov-chain.lino  self-reasoning.lino
rust/src/: check.rs  cst.rs  cst_convert.rs  cst_js.rs  cst_lean.rs  cst_rocq.rs  cst_rust.rs  lean_export.rs  lib.rs  main.rs  repl.rs  rocq.rs
rust/tests/: automatic_sequences_tests.rs  check_tests.rs  concepts_comparison_doc_tests.rs  cst_tests.rs  dependency_graph_tests.rs  diagnostics_tests.rs  extract_tests.rs  foundations_tests.rs  imports_tests.rs  lean_export_tests.rs  lib_algebra_tests.rs  lib_arithmetic_tests.rs  lib_classical_tests.rs  lib_first_order_tests.rs  lib_higher_order_tests.rs  lib_modal_tests.rs  lib_probabilistic_tests.rs  lib_programming_language_tests.rs  lib_provability_tests.rs  lib_set_theory_tests.rs  mtc_anum_tests.rs  namespaces_tests.rs  nat_links_tests.rs  proof_substrate_tests.rs  proofs_tests.rs  pure_links_strict_tests.rs  repl_tests.rs  rml_tests.rs  rocq_export_tests.rs  self_evaluator_tests.rs  self_grammar_tests.rs  self_metatheorem_tests.rs  self_operators_tests.rs  self_types_tests.rs  shared_examples.rs  shared_test_corpus.rs  tactics_tests.rs  trace_tests.rs  typed_kernel_links_tests.rs
(+217 files in other folders)
