[package]
name = "associative-dependent-logic"
version = "0.6.0"
edition = "2021"
description = "A prototype for logic framework that can reason about anything relative to given probability of input statements"
license = "Unlicense"

[[bin]]
name = "adl"
path = "src/main.rs"

[lib]
name = "adl"
path = "src/lib.rs"

[dependencies]
links-notation = "0.13.0"
